test_suite5/ALAN/test_suite/alan-2022-examples/failing/003230_mutation.alan
source Z begin if 2 then relax else else relax end end
